RESOLVED FIXED25772
Mac Chromium popup menus are not positioned correctly on scrolled pages
https://bugs.webkit.org/show_bug.cgi?id=25772
Summary Mac Chromium popup menus are not positioned correctly on scrolled pages
Paul Godavari
Reported 2009-05-13 17:45:13 PDT
HTML select popup menus are not positioned correctly on pages that have been scrolled on Mac Chromium (Windows and linux are not affected).
Attachments
Fix for Mac Chromium popup positioning (2.17 KB, patch)
2009-05-13 17:49 PDT, Paul Godavari
dglazkov: review+
Paul Godavari
Comment 1 2009-05-13 17:49:51 PDT
Created attachment 30306 [details] Fix for Mac Chromium popup positioning
Dimitri Glazkov (Google)
Comment 2 2009-05-14 08:50:42 PDT
Comment on attachment 30306 [details] Fix for Mac Chromium popup positioning > + WARNING: NO TEST CASES ADDED OR CHANGED Just an FYI: Don't leave this in. It's a reminder for you to make sure you think of tests :) Also seems like a Mac-specific method showExternal is not the most elegant solution, but that's probably beyond the scope of this bug. Can we combine them or have PopupMenuChromiumMac or something?
David Levin
Comment 3 2009-05-14 11:17:36 PDT
Assigned to levin for landing.
David Levin
Comment 4 2009-05-14 12:59:56 PDT
Note You need to log in before you can comment on or make changes to this bug.