2009-05-14  Paul Godavari  <paul@chromium.org>

Reviewed by Dimitri Glazkov.

        Bug: Mac Chromium popup menus are not positioned correctly
        on scrolled pages:
        https://bugs.webkit.org/show_bug.cgi?id=25772

        Fix Mac Chromium popup menu placement by taking into
        account any scrolling in the current window. This mirrors
        the positioning done in PopupContainer::show(), which is
        used on Chromium Windows and linux.

        Also fixed indenting for this method.

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::showExternal):

Canonical link: https://commits.webkit.org/35660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43723 268f45cc-cd09-0410-ab3c-d52691b4dbfc